Fix svg image layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -282,9 +282,11 @@ body {
     transform: scale(1);
     outline: none; }
   .file-icon {
+    display: block;
     width: 9rem;
     height: 9rem;
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: contain;
     margin-bottom: .8rem;
     cursor: inherit; }
   .file-label {
